--- a/raylib/raylib.vcxproj.filters
+++ b/raylib/raylib.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Sprite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\thirdparty\raylib\raylib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
