--- a/mathlib/mathlib.vcxproj.filters
+++ b/mathlib/mathlib.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="vec4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mat3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="utils.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="vec4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mat3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
