--- a/mathlib/mathlib.vcxproj.filters
+++ b/mathlib/mathlib.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="mat3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mat4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="utils.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="mat3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mat4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
