--- a/mathlib/mathlib.vcxproj.filters
+++ b/mathlib/mathlib.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="mat4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="transform2d.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="utils.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="mat4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="transform2d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
